navbar element align issue fix

--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -81,6 +81,6 @@
     padding: 5px 10px;
  } 
  #firstEl{
-    padding-top: 60px;
+    padding-top: 20px;
  } 
 }
